# libmat

./: CMakeLists.txt  Dockerfile  Makefile  README.md
include/: libmat.h
srcs/: addition.c  destroy.c  division.c  draw.c  fill.c  init.c  inversion.c  main.c  multiplication.c  negative.c  substractio.c  transposition.c
